--- a/views/disclaimer.jade
+++ b/views/disclaimer.jade
@@ -1,9 +1,12 @@
-#topleftdiv
-#disclaimer
-  p
-    | <b>DISCLAIMER</b> I'm not a lawyer, and I don't work or live in the US, but from my understanding medicolegal issues can be quite complicated over there, so if you work in such an environment, <b>PLEASE DON'T CITE</b> the information you find here as authorative (well, actually this goes for everyone). Also <b>PLEASE DOUBLE CHECK ALL REFERENCES</b> provided, they are for your convenience, but I rely on people's good will that they are correct.
-  p
-    | Remember to <b>ANONYMIZE ALL PATIENT RELATED INFORMATION</b>. If you for some reason don't want to share a specific case with other users you have the option of hiding it from them on the caselist, but the default is set so that everything you add is shared.  
-  p
-   | Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. It is free to use, and I intend to keep it so.
+extends layout
+
+block mainContent
+  #topleftdiv
+  #disclaimer
+    p
+      | <b>DISCLAIMER</b> I'm not a lawyer, and I don't work or live in the US, but from my understanding medicolegal issues can be quite complicated over there, so if you work in such an environment, <b>PLEASE DON'T CITE</b> the information you find here as authorative (well, actually this goes for everyone). Also <b>PLEASE DOUBLE CHECK ALL REFERENCES</b> provided, they are for your convenience, but I rely on people's good will that they are correct.
+    p
+      | Remember to <b>ANONYMIZE ALL PATIENT RELATED INFORMATION</b>. If you for some reason don't want to share a specific case with other users you have the option of hiding it from them on the caselist, but the default is set so that everything you add is shared.  
+    p
+     | Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. It is free to use, and I intend to keep it so.
     
