--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,3 +1,7 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 html,
 body,
 div,
@@ -84,6 +88,7 @@ video {
   border: 0;
   vertical-align: baseline;
 }
+/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
@@ -100,6 +105,11 @@ section {
 body {
   line-height: 1;
 }
+/*
+ol, ul {
+	list-style: none;
+}
+*/
 blockquote,
 q {
   quotes: none;
@@ -108,7 +118,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
+  content: '';
   content: none;
 }
 table {
