--- a/views/cases.jade
+++ b/views/cases.jade
@@ -1,55 +1,58 @@
-#cases
-  input.rounded#filter(type='text', name='filter', value='Type to filter')
-  button.rounded#toggleDiagnosis(type='button')
-    | Show dx
-  #caselist
-    table#cases
-      thead
-        tr.orbitron 
-          //th.sortable Last Edit
-          th.sortable Modalities
-          th.sortable Area
-          th.sortable.title Title
-          th.sortable.diagnosis.invisible Diagnosis
-          th.invisible Creator
-          th 
-          th
-          th
-          th
-      tbody
-        - each c in cases
-          - if (c.hidden == 'false' || c.creator == user || user == 'radioca1se' )
-            - if (c.firstpage != '0')
-              tr(ID="#{c.cid}") 
-                //td.lastEdit(style='display:none') #{c.lastEdit}
-                td #{c.modalities} 
-                td #{c.description}
-                td.title 
-                  a(href='/case/#{c.cid}/#{c.firstpage}') #{c.title}
-                td.diagnosis.invisible #{c.icds}
-                td.invisible
-                  //a(href='https://twitter.com/intent/user?screen_name=#{c.creator}')
-                  @#{c.creator}
-                td.eye(style='width:24px')
-                  - if (c.creator == user || user == 'radioca1se') 
-                    - if (c.hidden=='true')
-                      img.showcase(ID='#{c.cid}', src='/static/ico/eye-prohibition.png')
-                    - else
-                      img.hidecase(ID='#{c.cid}', src='/static/ico/eye.png')
-                td.invisible ##{c.language}
-                td.invisible(ID='#{c.cid}bm')
-                td.invisible(ID='#{c.cid}cc')
-                td.invisible(style='width:24px')
-                  - if (c.creator == user) 
-                    img.deletecase(ID='#{c.cid}', src='/static/ico/minus.png')
-    br
-    img.control#newcase(src='/static/ico/plus_bw.png')
-script(type='text/javascript")
-  var bookmarks = [#{bookmarks}];
-  var completed = [#{completed}];
-  for (var i = 0; i < completed.length; i++){
-    $("#"+completed[i]+"cc").html("<img src='/static/ico/ui-color-picker-tick.png'><div style='display:none'>#cc</div>"); 
+extends layout
+
+block mainContent
+  #cases
+    input.rounded#filter(type='text', name='filter', value='Type to filter')
+    button.rounded#toggleDiagnosis(type='button')
+      | Show dx
+    #caselist
+      table#cases
+        thead
+          tr.orbitron 
+            //th.sortable Last Edit
+            th.sortable Modalities
+            th.sortable Area
+            th.sortable.title Title
+            th.sortable.diagnosis.invisible Diagnosis
+            th.invisible Creator
+            th 
+            th
+            th
+            th
+        tbody
+          - each c in cases
+            - if (c.hidden == 'false' || c.creator == user || user == 'radioca1se' )
+              - if (c.firstpage != '0')
+                tr(ID="#{c.cid}") 
+                  //td.lastEdit(style='display:none') #{c.lastEdit}
+                  td #{c.modalities} 
+                  td #{c.description}
+                  td.title 
+                    a(href='/case/#{c.cid}/#{c.firstpage}') #{c.title}
+                  td.diagnosis.invisible #{c.icds}
+                  td.invisible
+                    //a(href='https://twitter.com/intent/user?screen_name=#{c.creator}')
+                    @#{c.creator}
+                  td.eye(style='width:24px')
+                    - if (c.creator == user || user == 'radioca1se') 
+                      - if (c.hidden=='true')
+                        img.showcase(ID='#{c.cid}', src='/static/ico/eye-prohibition.png')
+                      - else
+                        img.hidecase(ID='#{c.cid}', src='/static/ico/eye.png')
+                  td.invisible ##{c.language}
+                  td.invisible(ID='#{c.cid}bm')
+                  td.invisible(ID='#{c.cid}cc')
+                  td.invisible(style='width:24px')
+                    - if (c.creator == user) 
+                      img.deletecase(ID='#{c.cid}', src='/static/ico/minus.png')
+      br
+      img.control#newcase(src='/static/ico/plus_bw.png')
+  script(type='text/javascript")
+    var bookmarks = [#{bookmarks}];
+    var completed = [#{completed}];
+    for (var i = 0; i < completed.length; i++){
+      $("#"+completed[i]+"cc").html("<img src='/static/ico/ui-color-picker-tick.png'><div style='display:none'>#cc</div>"); 
+      }
+    for (var i = 0; i < bookmarks.length; i++){
+      $("#"+bookmarks[i]+"bm").html("<img src='/static/ico/star-small.png'><div style='display:none'>#fav</div>").show();
     }
-  for (var i = 0; i < bookmarks.length; i++){
-    $("#"+bookmarks[i]+"bm").html("<img src='/static/ico/star-small.png'><div style='display:none'>#fav</div>").show();
-  }
