moved client.coffee

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,8 +15,8 @@ html
     script(src = '/static/js/Markdown.Converter.js')
     script(src = '/static/js/Markdown.Sanitizer.js')
     //script(src = 'http://localhost:8124/debug.js')
-    //script(src = '/static/js/client.js')
-    != js('client')
+    script(src = '/static/js/client.js')
+    //!= js('client')
   body
     #wrap
       #sl
