--- a/views/imagepage.jade
+++ b/views/imagepage.jade
@@ -53,14 +53,14 @@ block mainContent
           textarea.mdtxt(style='display:none')
             | #{r.caption}
           .md
-          img.control.textedit.session(src='/static/ico/pencil.png')
-        img.control.removeradio(style='display:none', src='/static/ico/cross.png')
-        img.control.moveradioup(style='display:none', src='/static/ico/arrow-090.png')
-        img.control.moveradiodown(style='display:none', src='/static/ico/arrow-270.png')
-    img.control#addstack(style='display:none', src='/static/ico/plus.png')
+          img.control.textedit.session(src='/static/ico/pencil_bw.png')
+        img.control.removeradio(style='display:none', src='/static/ico/cross_bw.png')
+        img.control.moveradioup(style='display:none', src='/static/ico/arrow-090_bw.png')
+        img.control.moveradiodown(style='display:none', src='/static/ico/arrow-270_bw.png')
+    img.control#addstack(style='display:none', src='/static/ico/plus_bw.png')
   #markdown-help(style='display:none')
-    img.control.textedit.session(src='/static/ico/pencil.png')
-    img.control.Cancel(src='/static/ico/cross-circle.png')
+    img.control.textedit.session(src='/static/ico/pencil_bw.png')
+    img.control.Cancel(src='/static/ico/cross-circle_bw.png')
     textarea.mdtxt(style='display:none')
       | #{mdhelp}
     .md
