--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -475,6 +475,7 @@ textarea
     font-size 100%
 .md
     padding 10px 30px
+    font-family Verdana Helvetica Sans-serif
 #markdown-help
     background-image url("/static/img/paper/Texture0213.jpg")
     color #006
