--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
     script(src = '/static/js/jquery-1.7.min.js')
     script(src = '/static/js/jquery-ui-1.8.16.custom.min.js')
     script(src = '/auth/client')
-    script(src = 'http://platform.twitter.com/widgets.js')
+    //script(src = 'https://platform.twitter.com/widgets.js')
     script(src = '/static/js/jquery.mousewheel.min.js')
     script(src = '/static/js/Markdown.Converter.js')
     script(src = '/static/js/Markdown.Sanitizer.js')
