--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -7,6 +7,7 @@ block mainContent
     #meta_page.hidden #{page}
     #meta_modalities.hidden #{modalities}
     #meta_description.hidden #{description}
+    #meta_pagetype.hidden #{pagetype}
     | by:
     a(href='https://twitter.com/intent/user?screen_name=#{creator}', title='Link to twitter')
       @#{creator}
