--- a/views/textpage.jade
+++ b/views/textpage.jade
@@ -5,6 +5,7 @@ block mainContent
   #pageinfo
     #meta_cid.hidden #{cid}
     #meta_page.hidden #{page}
+    #meta_pagetype.hidden #{pagetype}
     | by:
     a(href='https://twitter.com/intent/user?screen_name=#{creator}', title='Link to twitter')
       @#{creator}
