multiple texts without stringifying the rest

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
     title RADIOCA.SE - #{title}
 
     link(href='http://fonts.googleapis.com/css?family=Orbitron:400,500|Dancing+Script|Damion', rel='stylesheet', type='text/css')
+    link(rel='stylesheet', href='/stylesheets/fonts.css')
     link(rel='stylesheet', href='/stylesheets/reset.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src = '/static/js/jquery-1.7.min.js')
