--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -176,15 +176,17 @@ th.sorted-desc
     margin 10px
     white-space nowrap
 #modalities_form
-    font-family helvetica, arial
+    margin-left -10px
 #description_form
-    font-family helvetica, arial
+    margin-left -10px
 .control
     cursor pointer 
     margin 0 10px
 button
     height 21px
     vertical-align top
+    font-family monospace
+    font-size 14px
 a
     -webkit-user-select none
     -khtml-user-select none
@@ -324,7 +326,7 @@ span#controls
     -moz-transform rotate(-90deg)
     -webkit-transform rotate(-90deg)
 .dialog_box
-    width 320px
+    width 340px
     position absolute
     left 50%
     margin-left -160px
@@ -388,7 +390,7 @@ span#controls
     cursor pointer
     vertical-align middle
 #cases
-    line-height 150%
+    line-height 135%
     width 100%
     float left
     text-align center
@@ -471,11 +473,11 @@ span#controls
 textarea
     width 99%
     line-height 1.2
-    font-family monospace
+    font-family DejaVuSansMono, monospace
     font-size 100%
 .md
     padding 10px 30px
-    font-family Verdana Helvetica Sans-serif
+    font-family DejaVuSansMono, Monospace, Helvetica, Sans-serif
 #markdown-help
     background-image url("/static/img/paper/Texture0213.jpg")
     color #006
@@ -515,7 +517,7 @@ input
 html
     height 100%
 body
-    font-family Helvetica, Arial
+    font-family DejaVuSansMono, Monospace, Helvetica, Arial
     //font-family Georgia, Palatino, serif
     color #aaa
     background-color #333
