--- a/views/imagepage.jade
+++ b/views/imagepage.jade
@@ -6,8 +6,10 @@ block mainContent
     #meta_cid.hidden #{cid}
     #meta_page.hidden #{page}
     #meta_pagetype.hidden #{pagetype}
+    #meta_nextpage.hidden #{nextpage}
+    #meta_prevpage.hidden #{prevpage}
     | by:
-    a(href='https://twitter.com/intent/user?screen_name=#{creator}', title='Link to twitter')
+    a(href='https://twitter.com/intent/user?screen_name=#{creator}', target='_blank', title='Link to twitter')
       @#{creator}
     | &#x2002;
     - if (bookmarked)
