downgraded redis to 0.7.3 because of racing condition

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -48,7 +48,7 @@
     top -12px
     left -24px
 #icd_req
-    width 60%
+    width 55%
     background-color #FFFFFF
     color #000000
 #icd_res_box
@@ -186,7 +186,6 @@ button
     height 21px
     vertical-align top
     font-family monospace
-    font-size 14px
 a
     -webkit-user-select none
     -khtml-user-select none
@@ -325,8 +324,9 @@ span#controls
 .vertical
     -moz-transform rotate(-90deg)
     -webkit-transform rotate(-90deg)
+    margin-left 5px
 .dialog_box
-    width 340px
+    width 320px
     position absolute
     left 50%
     margin-left -160px
@@ -443,7 +443,6 @@ span#controls
     #horizon
         position absolute
     .dialog_box
-        font-size 10pt
         width 100%
         margin 0
         left 0
@@ -524,6 +523,7 @@ body
     line-height 1
     height 100%
     background-image url('/static/img/OffGray.jpg')
+    font-size 14px
 .gray
     color #aaa
 h1, h2, h3, h4, h5, p 
@@ -561,7 +561,6 @@ ul, ol
 li 
     line-height 24px
 p, ul, ol 
-    font-size 16px
     line-height 24px
     max-width: 540px
 pre 
