before adding histories

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -43,6 +43,8 @@
 .sign_in_with_twitter.darker > div
     border-left 2px solid #237C8F
     border-right 2px solid #46BFD2
+#twitbutton
+    margin-top -20px
 .Cancel
     position absolute
     top -12px
@@ -56,7 +58,7 @@
     max-height 100px
 #toggleDiagnosis
     position absolute
-    top 15px
+    top 3px
     left 50%
     margin-left -61px
 #addtext
@@ -100,7 +102,7 @@ input#filter:focus
     width 25%
 input#filter
     position absolute
-    top 13px
+    top 3px
     left 5% 
     width 75px
 input.rounded
@@ -476,7 +478,6 @@ textarea
     font-size 100%
 .md
     padding 10px 30px
-    font-family DejaVuSansMono, Monospace, Helvetica, Sans-serif
 #markdown-help
     background-image url("/static/img/paper/Texture0213.jpg")
     color #006
@@ -529,6 +530,8 @@ body
 h1, h2, h3, h4, h5, p 
     margin-bottom 24px
     padding 0
+h1, h2, h3, h4, h5, .caption
+    font-family verdana, helvetica, arial
 h1 
     font-size 48px
 h2 
