--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,7 +26,7 @@ html
       #container
         #usercontrols
           a#sign_in
-            img(src='/static/img/sign-in-with-twitter-d.png')
+            img#twitbutton(src='/static/img/sign-in-with-twitter-d.png')
           #userinfo(style='display:none')
             a(id='sign_out') sign out &nbsp;
         block mainContent
