redid feedback system

--- a/views/imagepage.jade
+++ b/views/imagepage.jade
@@ -67,7 +67,7 @@ block mainContent
     textarea.mdtxt(style='display:none')
       | #{mdhelp}
     .md
-  img.control#feedbackbutton(src='/static/ico/balloon.png')
+  img.control#feedbackbutton(src='/static/ico/balloon_bw.png')
   #feedbackarea(style='display:none')
     #feedbacktext
     textarea#feedbackbox
