fixed? adding / removing cases and pages

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -155,9 +155,13 @@ th.sorted-desc
 .hidecase
     cursor pointer
     vertical-align middle
+    margin-top -6px
+    margin-bottom -4px
 .showcase
     cursor pointer
     vertical-align middle
+    margin-top -6px
+    margin-bottom -4px
 #nextpage
     position fixed
     right 2px
