--- a/views/cases.jade
+++ b/views/cases.jade
@@ -58,5 +58,5 @@ block mainContent
       $("#"+completed[i]+"cc").html("<img src='/static/ico/ui-color-picker-tick.png'><div style='display:none'>#cc</div>"); 
       }
     for (var i = 0; i < bookmarks.length; i++){
-      $("#"+bookmarks[i]+"bm").html("<img src='/static/ico/star-small.png'><div style='display:none'>#fav</div>").show();
+      $("#"+bookmarks[i]+"bm").html("<img src='/static/ico/star-small.png' style='height:13px'><div style='display:none'>#fav</div>").show();
     }
