--- a/views/layout.jade
+++ b/views/layout.jade
@@ -52,7 +52,7 @@ html
           | Do you want to delete this case?
           br
           br
-          button#deletecase_confirm(type='button')
+          button.rounded#deletecase_confirm(type='button')
             | Delete
           a.Cancel
             img.control(src="/static/ico/cross-circle_bw.png")
@@ -144,7 +144,7 @@ html
               input.file(type='file', name='userfile', id='userfile', multiple='multiple')
               .fakefile
                 input
-                button
+                button.rounded
                   | Browse
             input.input1(id='addstack_confirm', type='submit', value='Upload file(s)')
           a.Cancel
@@ -161,7 +161,7 @@ html
           | Do you want to remove the selected stack/radio from this page?
           br
           br
-          button#removeradio_confirm(type='button')
+          button.rounded#removeradio_confirm(type='button')
             | Remove radio
           a.Cancel
             img.control(src="/static/ico/cross-circle_bw.png")
@@ -169,7 +169,7 @@ html
           | This is the only page of this case, if you delete it the case will be removed
           br
           br
-          button#lastpage_confirm(type='button')
+          button.rounded#lastpage_confirm(type='button')
             | Delete page & remove case
           a.Cancel
             img.control(src="/static/ico/cross-circle_bw.png")
@@ -177,7 +177,7 @@ html
           | Do you want to delete the selected stack/radio from your collection?
           br
           br
-          button#deleteradio_confirm(type='button')
+          button.rounded#deleteradio_confirm(type='button')
             | Delete
           a.Cancel
             img.control(src="/static/ico/cross-circle_bw.png")
