starting knockout-conversion

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -222,12 +222,12 @@ a
     cursor pointer
     position absolute
     top 5px
-    right 5px
+    right -5px
 .removeradio
     cursor pointer
     position absolute
     top 5px
-    right 5px
+    right -5px
 .moveradiodown
     cursor pointer
     position absolute
@@ -331,7 +331,17 @@ span#controls
     -moz-transform rotate(-90deg)
     -webkit-transform rotate(-90deg)
     margin-left 5px
+.dcm
+    position absolute
+    top 5px
+    left -5px
+.dcm_grey
+    width 24px
+    height 24px
 .dialog_box
+    -moz-border-radus 10px
+    -webkit-border-radius 10px
+    border-radius 10px
     width 320px
     position absolute
     left 50%
