--- a/views/casepage.jade
+++ b/views/casepage.jade
@@ -2,7 +2,7 @@ extends layout
 
 block mainContent
   iframe.hidden(name="postframe", id="postframe", src="about:none")
-  iframe.hidden(name="putdcm", id="putdcm", src="about:none")
+  iframe.hidden(name="postdcm", id="postdcm", src="about:none")
   #pageinfo
     #meta_cid.hidden #{cid}
     #meta_page.hidden #{page}
@@ -10,9 +10,9 @@ block mainContent
     #meta_description.hidden #{description}
     #meta_pagetype.hidden #{pagetype}
     #meta_nextpage.hidden #{nextpage}
-    #meta_prevpage.hidden #{prevpage}
-    | by:
-    a(href='https://twitter.com/intent/user?screen_name=#{creator}', target='_blank', title='Link to twitter')
+    #meta_prevpage.hidden #{prevpage} 
+    span.author by:
+    a.author(href='https://twitter.com/intent/user?screen_name=#{creator}', target='_blank', title='Link to twitter')
       @#{creator}
     | &#x2002;
     - if (bookmarked)
