--- a/views/ko_layout.jade
+++ b/views/ko_layout.jade
@@ -17,6 +17,7 @@ html
     script(src = '/static/js/Markdown.Sanitizer.js')
     script(src = '/static/js/knockout-2.2.0.js')
     //script(src = 'http://localhost:8124/debug.js')
+    //script(src = '/static/js/client.js')
     script(src = '/static/js/ko_client.js')
     //!= js('client')
   body
