adding DICOM seems to be working

--- a/views/casepage.jade
+++ b/views/casepage.jade
@@ -64,6 +64,7 @@ block mainContent
     button#feedback_confirm(type='button')
       | Send comment
   #info(style='display:none')
+  #progressbar
   script(type='text/javascript')
     $(function(){
       $("#{modalities}").each(function(){
