--- a/views/casepage.jade
+++ b/views/casepage.jade
@@ -3,6 +3,7 @@ extends layout
 block mainContent
   iframe.hidden(name="postframe", id="postframe", src="about:none")
   iframe.hidden(name="postdcm", id="postdcm", src="about:none")
+  iframe.hidden(name="getdcm", id="getdcm", src="about:none")
   #pageinfo
     #meta_cid.hidden #{cid}
     #meta_page.hidden #{page}
