--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -28,12 +28,16 @@ block casepagecontent
             - each i in r.images
               img.stack_image(src='#{i}')
         img.control.removeradio(style='display:none', src='/static/ico/cross_bw.png')
-        .dcm.control
-          if (r.dcm)
-            img.dcm_yellow(src='/static/ico/dicom_yellow.svg')
-          else
-            img.dcm_grey(style='display:none', src='/static/ico/dicom.svg')
         .caption
+        - if (r.dcm)
+          .dcm.control
+            a.getdicom(href="/dicom/" + r.dcm + "a.osirixzip", target="_self")
+              img.dcm_yellow(src='/static/ico/dicom_orange.svg')
+            .postdcm(style='display:none')
+        - else
+          .dcm.nodcm.control(style='display:none')
+            img.dcm_grey(src='/static/ico/dicom.svg')
+            .postdcm(style='display:none')
           textarea.mdtxt(style='display:none')
             | #{r.caption}
           .md
