--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -61,6 +61,10 @@
     top 3px
     left 50%
     margin-left -61px
+    font-size 0.9em
+    font-family monospace
+tbody > tr > td.diagnosis
+    font-size 0.8em
 #addtext
     float left
     clear right
@@ -111,7 +115,9 @@ input#filter
     position absolute
     top 3px
     left 5% 
-    width 75px
+    width 8em
+    font-size 0.9em
+    font-family monospace
 input.rounded
     -moz-border-radus 10px
     -webkit-border-radius 10px
@@ -196,8 +202,8 @@ th.sorted-desc
     cursor pointer 
     margin 0 10px
 button
-    height 21px
-    vertical-align top
+    //height 21px
+    //vertical-align top
     font-family monospace
 a
     -webkit-user-select none
@@ -270,7 +276,7 @@ span#controls
     clear both
 #timestamp
     font-family helvetica arial
-    font-size 12px
+    font-size 0.9em
 #feedbackarea
     clear both
     width 100%
@@ -357,6 +363,7 @@ span#controls
 .dialog_box
     -moz-border-radus 10px
     -webkit-border-radius 10px
+    font-size 0.9em
     border-radius 10px
     width 320px
     position absolute
@@ -487,7 +494,7 @@ span#controls
         margin-top 35px
 @media screen and (max-width: 585px)
     .big_logo
-        font-size 30pt
+        font-size 2.5em
 @media screen and (min-width: 1024px)
     .radioimagepage
         width 33%
@@ -605,7 +612,7 @@ pre
 code 
     font-family Consolas, Monaco, Andale Mono, monospace
     line-height 1.5
-    font-size 0.9em
+    //font-size 0.9em
 aside 
     display block
     float right
