--- a/views/layout.jade
+++ b/views/layout.jade
@@ -152,11 +152,7 @@ html
           a.Cancel
             img.control(src="/static/ico/cross-circle_bw.png")
         #adddcm_dialog.dialog_box(style='display:none')
-          | Please choose DICOM set to upload,
-          br
-          | If a set is already connected to this image
-          br
-          | it will be replaced.
+          | Please choose DICOM set to upload, if a set is already connected to this image it will be replaced.
           br
           br
           form#uploadformdcm
