fixed paragraph trailing space

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -602,6 +602,8 @@ ul, ol
     margin 0
 li 
     line-height 24px
+p   
+    margin-bottom 1em
 p, ul, ol 
     line-height 24px
     max-width: 540px
