--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block mainContent
     .big_logo.orbitron RADIOCA.SE
     br
     br
-    img(src='/static/img/OldRadio_3_320.png', style='width: 320px')
+    img(src='/static/img/OldRadio_3_320_2.svg', style='width: 320px')
 
     br
     br
