--- a/views/casepage.jade
+++ b/views/casepage.jade
@@ -57,7 +57,7 @@ block mainContent
     textarea.mdtxt(style='display:none')
       | #{mdhelp}
     .md
-    img.control#feedbackbutton(src='/static/ico/balloon_bw.png')
+    //img.control#feedbackbutton(src='/static/ico/balloon_bw.png')
   #feedbackarea(style='display:none')
     #feedbacktext
     textarea#feedbackbox
