--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -16,7 +16,8 @@
     background-size 90% auto
     position absolute
 .arista
-    font 1.1em "[z] Arista", "Lucida Grande"
+    font-size 1.1em 
+    font-family "[z] Arista" "Lucida Grande" "Lucida Sans Unicode"
 .sign_in_with_twitter button
     background #3ea8bb -moz-linear-gradient( center bottom, rgb(21,104,154) 0%, rgb(85,157,201) 81%)
     background #3ea8bb -webkit-gradient(linear, left bottom, left top, color-stop(0, rgb(21,104,154)), color-stop(0.81, rgb(85,157,201)))
@@ -26,7 +27,8 @@
     -moz-border-radus 4px
     -webkit-border-radius 4px
     border-radius 4px
-    font 0.75em "Lucida Grande"
+    font-size 0.75em 
+    font-family "Lucida Grande" "Lucida Sans Unicode"
     height 2em
     position relative
     padding-right 6px
@@ -39,7 +41,8 @@
     -moz-border-radus 8px
     -webkit-border-radius 8px
     color #293f46
-    font 12px "Lucida Grande"
+    font-size 12px 
+    font-family "Lucida Grande" "Lucida Sans Unicode"
     height 24px
     padding-right 4px
     position absolute
@@ -207,7 +210,7 @@ th.sorted-desc
 button
     //height 21px
     //vertical-align top
-    font-family monospace
+    //font-family monospace
 a
     -webkit-user-select none
     -khtml-user-select none
