--- a/views/cases.jade
+++ b/views/cases.jade
@@ -51,7 +51,7 @@ block mainContent
                       img.deletecase(ID='#{c.cid}', src='/static/ico/minus.png')
       br
       img.control#newcase(src='/static/ico/plus_bw.png')
-  script(type='text/javascript")
+  script(type='text/javascript')
     var bookmarks = [#{bookmarks}];
     var completed = [#{completed}];
     for (var i = 0; i < completed.length; i++){
