before redoing log/in

--- a/views/about.jade
+++ b/views/about.jade
@@ -3,7 +3,7 @@ extends layout
 block mainContent
   #topleftdiv
   #about
-    | <span class=orbitron> RADIOCA.SE </span> -  a database for radiological cases
+    | <span class=orbitron> RADIOCASE </span> -  a database for radiological cases
     br
     br
     ul 
@@ -12,7 +12,7 @@ block mainContent
       li Do you like sharing?
     br
     p
-      | - Just use <span class=orbitron> RADIOCA.SE </span>
+      | - Just use <span class=orbitron> RADIOCASE </span>
     hr
     br
     h5
