--- a/views/cases.jade
+++ b/views/cases.jade
@@ -6,7 +6,7 @@ block mainContent
     button.rounded#toggleDiagnosis(type='button')
       | Show dx
     #caselist
-      table#cases
+      table#casestable
         thead
           tr.orbitron 
             //th.sortable Last Edit
